--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:inputType="textPassword"
             android:singleLine="true"
-            android:imeOptions="actionNext"
+
             android:ems="10"
             android:id="@+id/password"
             android:layout_marginTop="15dp"
@@ -42,6 +42,7 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:hint="Password"
+            android:imeOptions="actionGo"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:maxLines="1"
