--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -21,6 +21,10 @@
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:id="@+id/username1"
+            android:singleLine="true"
+            android:imeOptions="actionNext"
+            android:textIsSelectable="false"
+            android:maxLines="1"
             android:layout_gravity="center_horizontal"
             android:padding="15dp"
             android:layout_marginRight="15dp"
@@ -32,10 +36,14 @@
             android:layout_width="280dp"
             android:layout_height="wrap_content"
             android:id="@+id/password1"
+            android:singleLine="true"
+            android:imeOptions="actionNext"
+            android:textIsSelectable="false"
             android:layout_gravity="center_horizontal"
             android:padding="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
+            android:maxLines="1"
             android:layout_marginTop="20dp"
             android:hint="Password"
             android:inputType="textPassword" />
@@ -52,8 +60,12 @@
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/passconfirm"
+                android:singleLine="true"
+                android:imeOptions="actionNext"
+                android:textIsSelectable="false"
                 android:padding="15dp"
                 android:layout_marginLeft="15dp"
+                android:maxLines="1"
                 android:hint="Confirm Password"
                 android:inputType="textPassword" />
 
@@ -76,6 +88,11 @@
             android:id="@+id/email"
             android:layout_gravity="center_horizontal"
             android:hint="Email"
+            android:singleLine="true"
+            android:imeOptions="actionGo"
+
+            android:maxLines="1"
+
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp" />
 
