--- a/app/src/main/res/layout-land/activity_signup.xml
+++ b/app/src/main/res/layout-land/activity_signup.xml
@@ -6,24 +6,21 @@
 
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="com.asc.neetk.whatsplaying.signupActivity"
-        android:focusableInTouchMode="true">
 
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="com.asc.neetk.whatsplaying.signupActivity">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="false"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentStart="false"
-        android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:id="@+id/lin1">
 
@@ -36,11 +33,12 @@
             android:textIsSelectable="false"
             android:maxLines="1"
             android:layout_gravity="center_horizontal"
-            android:padding="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
-            android:layout_marginTop="30dp"
-            android:hint="Username" />
+            android:layout_marginTop="10dp"
+            android:hint="Username"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
 
         <EditText
             android:layout_width="280dp"
@@ -50,13 +48,14 @@
             android:imeOptions="actionNext"
             android:textIsSelectable="false"
             android:layout_gravity="center_horizontal"
-            android:padding="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
             android:maxLines="1"
             android:layout_marginTop="20dp"
             android:hint="Password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
 
         <LinearLayout
             android:orientation="horizontal"
@@ -73,11 +72,12 @@
                 android:singleLine="true"
                 android:imeOptions="actionNext"
                 android:textIsSelectable="false"
-                android:padding="15dp"
                 android:layout_marginLeft="15dp"
                 android:maxLines="1"
                 android:hint="Confirm Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:paddingLeft="15dp"
+                android:paddingRight="15dp" />
 
             <ImageView
                 android:layout_width="15dp"
@@ -90,7 +90,6 @@
             android:layout_width="280dp"
 
 
-            android:padding="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
             android:inputType="textEmailAddress"
@@ -104,7 +103,9 @@
             android:maxLines="1"
 
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp" />
 
         <Button
             android:layout_width="100dp"
@@ -115,4 +116,4 @@
             android:background="@drawable/psignup" />
     </LinearLayout>
 </RelativeLayout>
-</ScrollView>
+    </ScrollView>
