--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,8 @@
         <item name="colorPrimary">@color/purple</item>
 
         <item name="colorPrimaryDark">@color/darkpurple</item>
+        <item name="actionBarTabStyle">@style/MyActionBarTabs</item>
+
 
         <!-- The rest of your attribute s -->
     </style>
@@ -41,6 +43,16 @@
         <item name="android:layout_height">1dp</item>
         <item name="android:background">?android:attr/listDivider</item>
     </style>
+
+    <style name="MyActionBarTabs"
+        parent="@style/Widget.AppCompat.ActionBar.TabView">
+        <!-- tab indicator -->
+        <item name="android:background">@drawable/tab_selector</item>
+
+        <!-- Support library compatibility -->
+        <item name="background">@drawable/tab_selector</item>
+    </style>
+
 
 </resources>
 
