--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -59,8 +59,8 @@
 
         <LinearLayout
             android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="40dp"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
             android:layout_below="@+id/password"
             android:layout_centerHorizontal="true"
             android:layout_marginLeft="30dp"
@@ -71,25 +71,25 @@
             android:gravity="center">
 
             <Button
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:id="@+id/login"
                 android:background="@drawable/plogin" />
 
             <Button
                 style="?android:attr/buttonStyleSmall"
-                android:layout_width="80dp"
+                android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:id="@+id/signup"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="40dp"
                 android:background="@drawable/psignup" />
 
         </LinearLayout>
 
         <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="90dp"
-            android:layout_height="35dp"
+            android:layout_width="60dp"
+            android:layout_height="20dp"
             android:id="@+id/forgotpass"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
