--- a/app/src/main/res/layout-land/activity_profile_pic.xml
+++ b/app/src/main/res/layout-land/activity_profile_pic.xml
@@ -179,6 +179,75 @@
         android:padding="10dp"
         android:gravity="center_vertical|center_horizontal" />
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Music Genres that you listen to"
+        android:id="@+id/textView8"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
 
-    </ScrollView>
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gentag"
+            android:hint="Genres"
+            android:layout_weight=".5" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/subgen"
+            android:background="@drawable/fab" />
+    </LinearLayout>
+    <com.wefika.flowlayout.FlowLayout
+        android:id="@+id/flowgen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Artists that you listen to"
+        android:id="@+id/textView10"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/arttag"
+            android:hint="Artists"
+            android:layout_weight=".5" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/subart"
+            android:background="@drawable/fab" />
+    </LinearLayout>
+
+    <com.wefika.flowlayout.FlowLayout
+        android:id="@+id/flowartist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+</LinearLayout>
+</ScrollView>
