--- a/app/src/main/res/layout/activity_profile_pic.xml
+++ b/app/src/main/res/layout/activity_profile_pic.xml
@@ -10,7 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -177,6 +178,76 @@
         android:layout_marginTop="10dp"
         android:padding="10dp"
         android:gravity="center_vertical|center_horizontal" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Music Genres that you listen to"
+        android:id="@+id/textView8"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/gentag"
+            android:hint="Genres"
+            android:layout_weight=".5" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/subgen"
+            android:background="@drawable/fab" />
+    </LinearLayout>
+    <com.wefika.flowlayout.FlowLayout
+        android:id="@+id/flowgen"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Artists that you listen to"
+        android:id="@+id/textView10"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/arttag"
+            android:hint="Artists"
+            android:layout_weight=".5" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/subart"
+            android:background="@drawable/fab" />
+    </LinearLayout>
+
+    <com.wefika.flowlayout.FlowLayout
+        android:id="@+id/flowartist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
 
 </LinearLayout>
 
