--- a/app/src/main/res/layout-land/activity_profile_pic.xml
+++ b/app/src/main/res/layout-land/activity_profile_pic.xml
@@ -133,6 +133,8 @@
 
     </LinearLayout>
 
+    <View style="@style/Divider" />
+
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -179,6 +181,54 @@
         android:padding="10dp"
         android:gravity="center_vertical|center_horizontal" />
 
+    <View style="@style/Divider" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:text="Add a short bio"
+        android:id="@+id/textView14"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp" />
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/enterbio"
+            android:hint="Bio"
+            android:layout_weight=".5" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:id="@+id/bioadd"
+            android:background="@drawable/fab" />
+
+    </LinearLayout>
+
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Small Text"
+        android:id="@+id/bioview"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:padding="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp" />
+    <View style="@style/Divider" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -213,6 +263,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+    <View style="@style/Divider" />
 
     <TextView
         android:layout_width="wrap_content"
