--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/song"
-    android:layout_width="match_parent" android:layout_height="500dp"
+    android:layout_width="match_parent" android:layout_height="800dp"
     android:layout_gravity="center" android:orientation="horizontal"
     android:padding="15dp"
     android:weightSum="1">
@@ -16,12 +16,39 @@
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingLeft="20dp"
-        android:layout_weight="0.55"
         android:layout_gravity="center_vertical">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="User"
+                android:id="@+id/sharedby"
+                android:layout_marginTop="15dp"
+                android:textColor="@color/purple"
+                android:padding="5dp"
+                android:textSize="20dp" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/viewprofile"
+                android:background="@drawable/viewprof"
+                android:layout_gravity="bottom"
+                android:layout_marginRight="15dp"
+                android:layout_marginLeft="15dp" />
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -50,7 +77,7 @@
             android:text="Album Name"
             android:id="@+id/album"
             android:padding="5dp"
-            android:textSize="10dp"
+            android:textSize="14dp"
             android:textColor="@color/purple1" />
 
         <Button
