--- a/app/src/main/res/layout-land/activity_profile_pic.xml
+++ b/app/src/main/res/layout-land/activity_profile_pic.xml
@@ -300,5 +300,25 @@
         android:layout_height="wrap_content"
         />
 
+    <View style="@style/Divider" />
+
+    <TextView
+        android:id="@+id/filler3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:text="Users that you follow"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textSize="20dp" />
+
+    <com.wefika.flowlayout.FlowLayout
+        android:id="@+id/flowuser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp" />
+
+
+
 </LinearLayout>
 </ScrollView>
