--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,7 @@
     <item android:id="@+id/action_history" android:title="Your History"
         android:orderInCategory="100" app:showAsAction="never" />
     <item android:id="@+id/action_profilepic" android:title="Your Profile"
+        android:orderInCategory="1" app:showAsAction="never" />
+    <item android:id="@+id/action_preferences" android:title="Preferences"
         android:orderInCategory="0" app:showAsAction="never" />
 </menu>
