--- a/app/src/main/res/layout/list_fragment.xml
+++ b/app/src/main/res/layout/list_fragment.xml
@@ -44,7 +44,8 @@
         android:layout_marginRight="24dp"
         android:background="@color/purple"
         materialdesign:animate="true"
-       />
+        materialdesign:iconDrawable="@drawable/freindsicon2"
+        android:layout_marginBottom="16dp" />
 
 
 
