--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <item name="blue" type="color">#FF2196F3</item>
     <item name="darkblue" type="color">#FF1976D2</item>
+    <item name="semitrans" type="color">#33000000</item>
 
     <item name="purple" type="color">#9C27B0</item>
     <item name="green" type="color">#FF99CC00</item>
