--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -1,8 +1,28 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+<FrameLayout
     android:layout_width="match_parent"
 
     android:layout_height="match_parent"
     android:id="@+id/root_frame" >
 
 </FrameLayout>
+
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="#c14d4a4d"
+        android:dividerHeight="1dp"
+        android:background="#111"
+        android:headerDividersEnabled="true"
+        android:footerDividersEnabled="true"
+        android:drawSelectorOnTop="false" />
+</android.support.v4.widget.DrawerLayout>
