--- a/app/src/main/res/layout/fragment_listening.xml
+++ b/app/src/main/res/layout/fragment_listening.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/relativelaout1"
-    android:focusable="false"
-    android:clickable="true">
+    >
 
 
     <Button
@@ -23,10 +21,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="TapToStopListening"
-        android:id="@+id/textView"
+        android:id="@+id/listening"
         android:layout_below="@+id/listenbut1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"
         android:textSize="20sp" />
+
 
 </RelativeLayout>
