--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -46,14 +46,16 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/feed_item_profile_name"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:text="neel" />
 
                 <TextView
                     android:id="@+id/timestamp"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/timestamp"
-                    android:textSize="@dimen/feed_item_timestamp" />
+                    android:textSize="@dimen/feed_item_timestamp"
+                    android:text="2 days" />
             </LinearLayout>
         </LinearLayout>
 
@@ -64,7 +66,8 @@
             android:paddingBottom="5dp"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
-            android:paddingTop="@dimen/feed_item_status_pad_top" />
+            android:paddingTop="@dimen/feed_item_status_pad_top"
+            android:text="Is listeniing" />
 
         <LinearLayout
             android:orientation="horizontal"
