--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,11 +5,11 @@
 
 
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/semitrans</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowIsFloating">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowAnimationStyle">@style/MyAnimation.Window</item>
 
 
@@ -35,11 +35,21 @@
         <item name="colorPrimaryDark">@color/darkpurple</item>
         <item name="actionBarTabStyle">@style/MyActionBarTabs</item>
         <item name="colorAccent">@color/purple</item>
-        <item name="android:editTextStyle">@style/EditTextStyle</item>
+        <item name="android:windowActionBar">true</item>
 
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="actionBarStyle">@style/Theme.MyApp.ActionBar</item>
 
         <!-- The rest of your attribute s -->
     </style>
+
+    <style name="Theme.MyApp.ActionBar" parent="style/Widget.AppCompat.Light.ActionBar.Solid">
+        <item name="colorPrimary">@color/purple</item>
+        <item name="elevation">0dp</item>
+    </style>
+
+
+
     <style name="Divider">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
@@ -60,6 +70,16 @@
         <item name="android:background">@drawable/fab_label_background</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
+    <style name="DialogAnimation" parent="@android:style/Theme.Panel">
+        <item name="android:windowAnimationStyle">@style/MyAnimations</item>
+    </style>
+
+    <style name="MyAnimations" parent="@android:style/Animation.Activity">
+        <item name="android:windowEnterAnimation">@anim/anim_out</item>
+        <item name="android:windowExitAnimation">@anim/anim_out</item>
+    </style>
+
 
 
 </resources>
