--- a/app/src/main/res/layout/expnd.xml
+++ b/app/src/main/res/layout/expnd.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fbutton="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/song"
-    android:layout_width="match_parent" android:layout_height="800dp"
+    android:id="@+id/song2"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:layout_gravity="center" android:orientation="horizontal"
     android:padding="15dp"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/transparent">
 
 
-
-    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+    <RelativeLayout
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:id="@+id/coverfor"
-        android:layout_gravity="center"
-        android:focusableInTouchMode="false"
-        android:src="@drawable/profile"
-        app:border_color="@color/material_blue_grey_800"
-        app:border_width="2dp" />
+        android:layout_gravity="center_vertical">
+
+        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:id="@+id/coverfor"
+            android:layout_gravity="center"
+            android:focusableInTouchMode="false"
+            android:src="@drawable/profile"
+            app:border_color="@color/material_blue_grey_800"
+            app:border_width="2dp" />
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -27,33 +33,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:paddingLeft="20dp"
-        android:layout_gravity="center_vertical">
+        android:layout_gravity="center">
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="bottom">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="User"
-                android:id="@+id/sharedby"
-                android:layout_marginTop="15dp"
-                android:textColor="@color/purple"
-                android:padding="5dp"
-                android:textSize="20dp" />
-
-            <ImageButton
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:id="@+id/viewprofile"
-                android:background="@drawable/viewprof"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="15dp"
-                android:layout_marginLeft="15dp" />
 
         </LinearLayout>
 
@@ -65,7 +51,8 @@
             android:id="@+id/songname"
             android:padding="5dp"
             android:textSize="18dp"
-            android:textColor="@color/purple" />
+            android:textColor="@color/purple"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +62,8 @@
             android:id="@+id/artist"
             android:padding="5dp"
             android:textSize="16dp"
-            android:textColor="@color/purple1" />
+            android:textColor="@color/purple1"
+            android:layout_gravity="center_horizontal" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,7 +73,8 @@
             android:id="@+id/album"
             android:padding="5dp"
             android:textSize="14dp"
-            android:textColor="@color/purple1" />
+            android:textColor="@color/purple1"
+            android:layout_gravity="center_horizontal" />
 
         <info.hoang8f.widget.FButton
             android:id="@+id/listenonline"
