--- a/app/src/main/res/layout/activity_circbartest.xml
+++ b/app/src/main/res/layout/activity_circbartest.xml
@@ -98,9 +98,11 @@
             android:layout_height="150dp"
             android:id="@+id/replay"
             android:background="@drawable/rotate1"
-            android:alpha=".5"
             android:visibility="invisible"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:alpha=".77"
+            android:adjustViewBounds="false" />
+
     </RelativeLayout>
 <TextView
         android:layout_width="wrap_content"
