--- a/app/src/main/res/layout/list_fragment_2.xml
+++ b/app/src/main/res/layout/list_fragment_2.xml
@@ -9,7 +9,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#29000000">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -18,10 +19,12 @@
             android:gravity="center_horizontal"
             android:orientation="vertical">
 
-            <ListView
-                android:id="@android:id/list"
+            <com.nhaarman.listviewanimations.itemmanipulation.DynamicListView
+                android:id="@+id/list2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></ListView>
+                android:layout_height="match_parent"
+                android:smoothScrollbar="true"
+                android:showDividers="none" />
 
             <TextView
                 android:id="@+id/empty1"
