--- a/app/src/main/res/layout/song.xml
+++ b/app/src/main/res/layout/song.xml
@@ -4,7 +4,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fbutton="http://schemas.android.com/apk/res-auto"
     android:id="@+id/song"
-    android:layout_width="match_parent" android:layout_height="800dp"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:layout_gravity="center" android:orientation="horizontal"
     android:padding="15dp"
     android:weightSum="1">
