--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="150dp"
-    android:background="#ff5a0088"
+    android:background="#111"
     android:orientation="vertical"
     android:weightSum="1"
     android:gravity="center_horizontal"
