--- a/app/src/main/res/layout/activity_central.xml
+++ b/app/src/main/res/layout/activity_central.xml
@@ -20,7 +20,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:choiceMode="singleChoice"
-        android:background="#fff1f1f1"
+        android:background="#111"
         android:headerDividersEnabled="true"
         android:footerDividersEnabled="true"
         android:drawSelectorOnTop="false" />
