--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -28,6 +28,6 @@ android:orientation="horizontal"
     android:textStyle="bold"
     android:padding="5dp"
     android:layout_marginLeft="10dp"
-    android:textColor="#ff5f5f5f" />
+    android:textColor="@color/white" />
 
 </LinearLayout>
